--- a/index.html
+++ b/index.html
@@ -992,22 +992,22 @@
                 <div class="legend-item santa-juliana" data-route="santa-juliana">
                     <div class="legend-color" style="background-color: var(--accent-blue);"></div>
                     <span>🚛 Santa Juliana</span>
-                    <span class="driver-info">(Baru)</span>
+                    <span class="driver-info">(Baru 18k)</span>
                 </div>
                 <div class="legend-item ibia" data-route="ibia">
                     <div class="legend-color" style="background-color: var(--accent-orange);"></div>
                     <span>🚛 Ibiá</span>
-                    <span class="driver-info">(Diego)</span>
+                    <span class="driver-info">(Diego 3k)</span>
                 </div>
                 <div class="legend-item patos" data-route="patos">
                     <div class="legend-color" style="background-color: var(--accent-red);"></div>
                     <span>🚛 Patos de Minas</span>
-                    <span class="driver-info">(André)</span>
+                    <span class="driver-info">(André 8k)</span>
                 </div>
                 <div class="legend-item passos" data-route="passos">
                     <div class="legend-color" style="background-color: var(--accent-green);"></div>
                     <span>🚛 Passos</span>
-                    <span class="driver-info">(Luis)</span>
+                    <span class="driver-info">(Luis 8k)</span>
                 </div>
             </div>
         </div>
