--- a/index.html
+++ b/index.html
@@ -986,28 +986,28 @@
     <div class="header">
         <div class="company-info">
             <div>
-                <h1 class="company-title">HortSoy - Filiais</h1>
+                <h1 class="company-title">HORTSOY - Filiais</h1>
             </div>
             <div class="legend">
                 <div class="legend-item santa-juliana" data-route="santa-juliana">
                     <div class="legend-color" style="background-color: var(--accent-blue);"></div>
                     <span>🚛 Santa Juliana</span>
-                    <span class="driver-info">(Baru 18k)</span>
+                    <span class="driver-info">(Baru 18T)</span>
                 </div>
                 <div class="legend-item ibia" data-route="ibia">
                     <div class="legend-color" style="background-color: var(--accent-orange);"></div>
                     <span>🚛 Ibiá</span>
-                    <span class="driver-info">(Diego 3k)</span>
+                    <span class="driver-info">(Diego 3T)</span>
                 </div>
                 <div class="legend-item patos" data-route="patos">
                     <div class="legend-color" style="background-color: var(--accent-red);"></div>
                     <span>🚛 Patos de Minas</span>
-                    <span class="driver-info">(André 8k)</span>
+                    <span class="driver-info">(André 8T)</span>
                 </div>
                 <div class="legend-item passos" data-route="passos">
                     <div class="legend-color" style="background-color: var(--accent-green);"></div>
                     <span>🚛 Passos</span>
-                    <span class="driver-info">(Luis 8k)</span>
+                    <span class="driver-info">(Luiz 8T)</span>
                 </div>
             </div>
         </div>
