--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
             <div class="branch-list" id="branchList"></div>
         </div>
     </div>
-
+    
+        // Biblioteca de mapas
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+    
     <script>
 
         // Inicializar o mapa
