Comment out 'campos-altos' destination entry

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
                 routes: ['ibia'],
                 driver: 'Diego'
             },
-            'campos-altos': { name: 'Campos Altos', coord: [-19.6967, -46.1726], type: 'destination', routes: ['ibia'] },
+            /*'campos-altos': { name: 'Campos Altos', coord: [-19.6967, -46.1726], type: 'destination', routes: ['ibia'] },
             'araxa': { name: 'Araxá', coord: [-19.5902, -46.9438], type: 'destination', routes: ['ibia'] },
             'patos-minas': { 
                 name: 'Patos de Minas', 
                 coord: [-18.5783, -46.5184], 
                 type: 'base', 
                 routes: ['patos'],
-                driver: 'André'
+                driver: 'André'*/
             },
             'irai-minas': { name: 'Iraí de Minas', coord: [-19.0833, -47.4667], type: 'destination', routes: ['patos'] },
             'sao-gotardo': { name: 'São Gotardo', coord: [-19.3119, -46.0461], type: 'destination', routes: ['patos'] },
