Change driver name from Luis to André in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="legend-item passos" data-route="passos">
                     <div class="legend-color" style="background-color: var(--accent-green);"></div>
                     <span>🚛 Passos</span>
-                    <span class="driver-info">(Luiz 8T)</span>
+                    <span class="driver-info">(André 8T)</span>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
             'santa-juliana': 'Baru',
             'ibia': 'Diego',
             'patos-minas': 'André',
-            'passos': 'Luis'
+            'passos': 'André'
         };
 
         // Dados das cidades com informações completas: Adicionados motoristas
@@ -135,7 +135,7 @@
                 routes: ['ibia'],
                 driver: 'Diego'
             },
-            //'campos-altos': { name: 'Campos Altos', coord: [-19.6967, -46.1726], type: 'destination', routes: ['ibia'] },//
+            'campos-altos': { name: 'Campos Altos', coord: [-19.6967, -46.1726], type: 'destination', routes: ['ibia'] },
             'araxa': { name: 'Araxá', coord: [-19.5902, -46.9438], type: 'destination', routes: ['ibia'] },
             'patos-minas': { 
                 name: 'Patos de Minas', 
@@ -153,7 +153,7 @@
                 coord: [-20.7185, -46.6097], 
                 type: 'base', 
                 routes: ['passos'],
-                driver: 'Luis'
+                driver: 'André'
             },
             'carmo-rio-claro': { name: 'Carmo do Rio Claro', coord: [-20.9739, -46.1148], type: 'destination', routes: ['passos'] },
             'piumhi': { name: 'Piumhi', coord: [-20.4766, -45.9587], type: 'destination', routes: ['passos'] },
@@ -184,7 +184,7 @@
                 name: 'Passos',
                 color: routeColors['passos'],
                 cities: ['passos', 'carmo-rio-claro', 'piumhi', 'bambui'],
-                driver: 'Luis'
+                driver: 'André'
             }
         };
 
