--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 routes: ['ibia'],
                 driver: 'Diego'
             },
-            'campos-altos': { name: 'Campos Altos', coord: [-19.6967, -46.1726], type: 'destination', routes: ['ibia'] },
+
             'araxa': { name: 'Araxá', coord: [-19.5902, -46.9438], type: 'destination', routes: ['ibia'] },
             'patos-minas': { 
                 name: 'Patos de Minas', 
@@ -171,7 +171,7 @@
             'ibia': {
                 name: 'Ibiá',
                 color: routeColors['ibia'],
-                cities: ['ibia', 'campos-altos', 'araxa', 'uberaba'],
+                cities: ['ibia', 'araxa', 'uberaba'],
                 driver: 'Diego'
             },
             'patos': {
