--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="company-info">
             <div>
-                <h1 class="company-title">HORTSOY - Filiais</h1>
+                <img src="logo.png" alt="HortSoy Logo" class="company-logo">
             </div>
             <div class="legend">
                 <div class="legend-item santa-juliana" data-route="santa-juliana">
